--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="question animal not-dormitory">
-                <h2 class="title">애완동물을 키우나요?</h1>
+                <h2 class="title">반려동물을 키우나요?</h1>
                 <div class="answer">
                     <input type="checkbox" id="animal-dog" name="animal" value='0'><label for="animal-dog">강아지</label>
                     <input type="checkbox" id="animal-cat" name="animal" value='1'><label for="animal-cat">고양이</label>
