--- a/checkmate/templates/dom_infoWrite.html
+++ b/checkmate/templates/dom_infoWrite.html
@@ -31,7 +31,7 @@
 	<img src="" alt="profile_image">
 	<!-- 프로필이미지 -->
 	<p>{{ user.user_nickname }}</p>
-	<input type="file" name="image">
+	<input type="file" name="image" id="">
 	<!-- 사진 업로드 -->
 </div>
 	<textarea id="content" class="body" name="content" cols="130" rows="20" style="resize: none;"
