--- a/checkmate/templates/offcampusUpdate.html
+++ b/checkmate/templates/offcampusUpdate.html
@@ -21,7 +21,7 @@
 			<img src="" alt="profile_image">
 			<!-- 프로필이미지 -->
 			<p>{{ user.user_nickname }}</p>
-			<input type="file" name="image">
+			<input type="image" src="{{ post.image }}" alt="" name="image">
 			<!-- 사진 업로드 -->
 		</div>
 		<textarea class="body" name="content" cols="130" rows="20" style="resize: none;" placeholder="   이곳에 본문을 작성하세요."
