--- a/account/templates/mypageProfile.html
+++ b/account/templates/mypageProfile.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
-<head> 
-    {% load static %}
-    {% block head %}
-    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" href="{% static 'css/mypage.css' %}">
-    {% endblock %}
-</head>
+{% load static %}
+{% block head %}
+<script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+<link rel="stylesheet" href="{% static 'css/mypage.css' %}">
+{% endblock %}
+
 
 {% block content %}
 
@@ -13,26 +12,19 @@
     <div class="mypage_nav">
         <h3 class="mypage_title">마이페이지</h3>
         <!-- border-left 색상 바꾸기 (클릭 모션) -->
-<<<<<<< HEAD
+
         <a href="{% url 'mypageProfile' %}">회원정보 수정</a>
         <a href="{% url 'infoWrite' %}">체크리스트 수정</a>
         <a href="{% url 'mypageScrap' %}">스크랩 목록</a>
         <a href="{% url 'mypageWritten' %}">내가 작성한 글</a>
-=======
-        <ul >
-            <li><a href="">회원정보 수정</a></li>
-            <li><a href="">체크리스트 수정</a></li>
-            <li><a href="">스크랩 목록</a></li>
-            <li><a href="">내가 작성한 글</a></li>
-        </ul>
->>>>>>> e9d39be0696666b1255e9b9b692a6708b62423ff
+
     </div>
     <div class="mypage_content">
         <form action="" method="post">
             {% csrf_token %}
 
-            <img id="target_img" src="">
-            <input type="file" id="user_image" name="user_image" style="display:none;">
+            <img id="target_img" src="{{ user.user_image }}" style="width:50px; height:50px;">
+            <input type="file" id="user_image" name="user_image" style="display:none;" >
             <script>
 
                 $('#target_img').click(function (e) {
@@ -64,20 +56,19 @@
 
             </script>
             <!-- 프로필사진 -->
-            <input type="text" id="user_nickname" name="user_nickname" maxlength='8' value=""> <br>
+            <input type="text" id="user_nickname" name="user_nickname" maxlength='8' value="{{ user.user_nickname }}"> <br>
             <!-- 닉네임 -->
-            <!-- <p>ID</p> -->
-            
+
             <p>비밀번호 변경</p>
             <p>
                 {% if messages %}
-                    {% for message in messages %}
-                        {{ message.message }}
-                    {% endfor %}
+                {% for message in messages %}
+                {{ message.message }}
+                {% endfor %}
                 {% endif %}
             </p>
             {% csrf_token %}
-            
+
             <p>현재 비밀번호</p>
             <input type="password" name="user_password"><br>
             <p>새 비밀번호</p>
@@ -89,13 +80,13 @@
     </div>
 </div>
 <img class="open" src="{% static 'img/chat_icon.png' %}" alt="">
-<div class="hidden modal" >
-    <button class="modal__closeBtn" >X</button>
+<div class="hidden modal">
+    <button class="modal__closeBtn">X</button>
 </div>
 <script type="text/javascript" src="{% static 'js/modal.js' %}">
 
 
-    
+
 
 </script>
 
