--- a/checkmate/templates/offcampusView.html
+++ b/checkmate/templates/offcampusView.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div>
-    <h3>{{ post.title }}}}</h3>
+    <h3>{{ post.title }}</h3>
     <!-- 타이틀 -->
     <p>{{ post.preface }} | {{ post.preface_2 }}</p>
     <div>
@@ -10,18 +10,22 @@
     </div>
 </div>
 <div>
-    <img src="" alt="profile_image">
+    <img src="{{ post.user_id.user_image }}" alt="profile_image">
     <!-- 프로필이미지 -->
     <p> {{ post.user_id.user_nickname }} </p>
     <!-- 닉네임 -->
 </div>
 
 <div>
-    <img src="{{ post.image }}" alt="">
+    <img src="{{ post.image }}" alt="image">
     <p>{{ post.content }}</p>
     <!-- 내용 -->
-    <a href="{% url 'offcampusUpdate' post.id %}"><span>수정</span></a>
-    <a href="{% url 'offcampusDelete' post.id %}"><span>삭제</span></a>
+    {% if post.user_id.id == user.id %}
+    <a href="{% url 'domitoryUpdate' post.id %}"><span>수정</span></a>
+    <a href="{% url 'domitoryDelete' post.id %}"><span>삭제</span></a>
+    {% else %}
+
+    {% endif %}
 </div>
 <div>
     <ul class="pagination">
